[package]
name = "horeb"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.33", features = ["serde"] }
eframe = "0.26.0-alpha.2"
egui = "0.26.0-alpha.2"
serde = { version = "1.0.196", features = ["derive"]}
serde_json = "1.0.113"
homedir = "0.2.1"